@@ -6,7 +6,7 @@
 # Copyright (c) 1998-1999 by Scriptics Corporation.
 # All rights reserved.
 #
-# RCS: @(#) $Id: safe.test,v 1.13 2004/03/17 18:15:49 das Exp $
+# RCS: @(#) $Id: safe.test,v 1.14 2004/08/19 17:59:18 dgp Exp $
 
 package require tcltest 2.1
 eval tcltest::configure $argv
@@ -55,14 +55,14 @@ test safe-1.2 {Safe Tk loading into an interpreter} {
     safe::interpDelete a
     set l
 } $hidden_cmds
-test safe-1.3 {Safe Tk loading into an interpreter} {
+test safe-1.3 {Safe Tk loading into an interpreter} -body {
     catch {safe::interpDelete a}
     safe::interpCreate a
     safe::loadTk a
     set l [lsort [interp aliases a]]
     safe::interpDelete a
     set l
-} {encoding exit file load source}
+} -match glob -result {*encoding*exit*file*load*source*}
 
 test safe-2.1 {Unsafe commands not available} {
     catch {safe::interpDelete a}
